--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -14,13 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "from datetime import datetime,timedelta\n",
+    "from itertools import chain\n",
+    "from scipy import stats\n",
+    "from scipy.stats import ttest_ind, ttest_ind_from_stats"
    ]
   },
   {
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +129,7 @@
        "'2017-08-23'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,20 +142,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-08-23\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRECIP</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-08-24</th>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-25</th>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-26</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-27</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-28</th>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-19</th>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-20</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-21</th>\n",
+       "      <td>0.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-22</th>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2223 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            PRECIP\n",
+       "DATE              \n",
+       "2016-08-24    0.08\n",
+       "2016-08-25    0.08\n",
+       "2016-08-26    0.00\n",
+       "2016-08-27    0.00\n",
+       "2016-08-28    0.01\n",
+       "...            ...\n",
+       "2017-08-19    0.09\n",
+       "2017-08-20     NaN\n",
+       "2017-08-21    0.56\n",
+       "2017-08-22    0.50\n",
+       "2017-08-23    0.45\n",
+       "\n",
+       "[2223 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
+    "last_year_prcp = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= year_ago).all()\n",
+    "last_year_prcp\n",
     "# Starting from the most recent data point in the database. \n",
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
-    "\n",
+    "year, month, day = map(int, recent_date.split(\"-\"))\n",
+    "year_ago = datetime(year, month, day) - timedelta(days=365)\n",
+    "print(year_ago.strftime(\"%Y-%m-%d\"))\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
-    "\n",
+    "date = [row[0] for row in last_year_prcp]\n",
+    "precipitation =  [row[1] for row in last_year_prcp]\n",
+    "#date\n",
+    "#precipitation\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
+    "date_precip_df = pd.DataFrame({'DATE' : date,\n",
+    "                               'PRECIP' : precipitation}).set_index('DATE')\n",
+    "date_precip_df\n",
     "\n",
     "\n",
     "# Sort the dataframe by date\n",
